--- a/Services/Order/Presentation/MultiShop.Presentation.WebApi/MultiShop.Presentation.WebApi.csproj
+++ b/Services/Order/Presentation/MultiShop.Presentation.WebApi/MultiShop.Presentation.WebApi.csproj
@@ -7,11 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper" Version="12.0.1" />
-    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
-    <PackageReference Include="MongoDB.Bson" Version="3.4.1" />
-    <PackageReference Include="MongoDB.Driver" Version="3.4.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
