--- a/Services/Order/Presentation/MultiShop.Presentation.WebApi/MultiShop.Presentation.WebApi.csproj
+++ b/Services/Order/Presentation/MultiShop.Presentation.WebApi/MultiShop.Presentation.WebApi.csproj
@@ -7,11 +7,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="13.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.36">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.36">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\..\Core\MultiShop.Core.Application\MultiShop.Core.Application.csproj" />
+    <ProjectReference Include="..\..\Infrastructure\MultiShop.Infrastructure.Persistence\MultiShop.Infrastructure.Persistence.csproj" />
   </ItemGroup>
 
 </Project>
