--- a/Services/Order/Presentation/MultiShop.Presentation.WebApi/Properties/launchSettings.json
+++ b/Services/Order/Presentation/MultiShop.Presentation.WebApi/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7123;http://localhost:5159",
+      "applicationUrl": "https://localhost:7073",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
